--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
 
                 <h2 class="font-esthetic my-4" style="font-size: 2.5rem;">Rian &amp; Afika</h2>
-                <p class="mb-0" style="font-size: 1.25rem;">Minggu, 4 April 2023</p>
+                <p class="mb-0" style="font-size: 1.25rem;">Minggu, 4 April 2024</p>
 
                 <div class="d-flex justify-content-center align-items-center mt-4 mb-2">
                     <div class="mouse-animation border border-2">
@@ -168,7 +168,7 @@
                             <img src="./assets/images/cowo.png" alt="cowo" onclick="util.modal(this)">
                         </div>
                         <h2 class="font-esthetic" style="font-size: 2.5rem;">Rian Aryandi</h2>
-                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Gedo / Jombang</p>
+                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Gedo</p>
                         <p class="mb-0">Bapak Nana &amp; Ibu Neneng </p>
                     </div>
 
@@ -259,7 +259,7 @@
 
                     <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
                         <!-- Ganti waktunya pada data-waktu (sesuai format tersebut) -->
-                        <div class="row justify-content-center" data-time="2024-01-01 00:00:00" id="count-down">
+                        <div class="row justify-content-center" data-time="2024-04-04 09:00:00" id="count-down">
                             <div class="col-3 p-1">
                                 <h2 class="d-inline m-0 p-0" id="day">0</h2><small class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
                             </div>
@@ -299,7 +299,7 @@
                     </div>
 
                     <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
-                        <a href="https://goo.gl/maps/ALZR6FJZU3kxVwN86" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
+                        <a href="https://maps.app.goo.gl/ZNPnnwSiUfN7DYZ97" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
                         <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.95rem;">RT 03 RW 10, Desa Sirnagalih, Kec. Tamansari, Kab. Bogor, Jawa Barat 16610</p>
                     </div>
 
@@ -335,12 +335,12 @@
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Bank_Central_Asia.svg/1598px-Bank_Central_Asia.svg.png" class="img-fluid w-25" alt="bca">
 
                                 <div class="d-flex justify-content-between align-items-center mt-2">
-                                    <p class="m-0 p-0" style="font-size: 0.95rem;">1234 5678 9101 112</p>
+                                    <p class="m-0 p-0" style="font-size: 0.95rem;">Belum Tersedia</p>
                                     <!-- Ubah juga data-copy sesuai dengan no rekening -->
-                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="123456789101112" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
+                                    <button class="btn btn-outline-dark btn-sm rounded-4" data-copy="Belum Tersedia" onclick="util.copy(this, 'Tersalin')"><i class="fa-solid fa-copy me-1"></i>Salin</button>
                                 </div>
 
-                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">Nama Wahyu Siapa</p>
+                                <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">A/N Rian Aryandi</p>
                             </div>
                             <div class="col card-body border rounded-4 shadow p-4 mx-4 mt-2 mb-4 text-start" data-aos="fade-down" data-aos-duration="1500">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Bank_Mandiri_logo_2016.svg/2560px-Bank_Mandiri_logo_2016.svg.png.svg.png" class="img-fluid w-25" alt="bni">
@@ -447,7 +447,6 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="color-theme-black">
             <path fill="currentColor" fill-opacity="1" d="M0,224L34.3,234.7C68.6,245,137,267,206,266.7C274.3,267,343,245,411,234.7C480,224,549,224,617,213.3C685.7,203,754,181,823,197.3C891.4,213,960,267,1029,266.7C1097.1,267,1166,213,1234,192C1302.9,171,1371,181,1406,186.7L1440,192L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path>
         </svg>
-
         <!-- End Of Invitation -->
         <section class="dark-section bg-black pb-5">
             <div class="container">
@@ -456,7 +455,7 @@
                         Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila Bapak/Ibu/Saudara/i berkenan untuk memberikan do'a restunya. Kami ucapkan terima kasih.
                     </p>
 
-                    <h2 class="font-esthetic" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh</h2>
+                    <h2 class="font-esthetioc" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh</h2>
                     <h2 class="font-arabic pt-4 px-2" style="font-size: 2rem;">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ</h2>
 
                     <hr class="mt-3 mb-2">
